--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <base href="." target="_blank">
     <title>anyGIF</title>
     <link rel="icon" type="image/png"
-        href="/img/favicon.png">
+        href="img/favicon.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -115,7 +115,7 @@ body {
 <body>
     <div class="container">
         <div class="banner">
-            <img src="/img/Banner@2x.png" alt="anyGIF logo - red banner with play button and text" width="600" height="150">
+            <img src="img/Banner@2x.png" alt="anyGIF logo - red banner with play button and text" width="600" height="150">
         </div>
         
         <div class="content">
