--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <base href="." target="_blank">
     <title>anyGIF</title>
     <link rel="icon" type="image/png"
-        href="img/favicon.png">
+        href="/img/favicon.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -115,7 +115,7 @@ body {
 <body>
     <div class="container">
         <div class="banner">
-            <img src="img/Banner@2x.png" alt="anyGIF logo - red banner with play button and text" width="600" height="150">
+            <img src="/img/Banner@2x.png" alt="anyGIF logo - red banner with play button and text" width="600" height="150">
         </div>
         
         <div class="content">
@@ -125,11 +125,11 @@ body {
             <div class="comparison">
                 <div class="comparison-item">
                     <h3>The Best Online Converter</h3>
-                    <img src="http://f1dg3t-xyz.duckdns.org/x/gifs/8mb.video-DQn-KfNBqXIE-ezgif.com-optimize%20(1).gif" alt="GIF created by online converter showing lower quality" width="500" height="281" defer>
+                    <img src="/img/competition.gif" alt="GIF created by online converter showing lower quality" width="500" height="281" defer>
                 </div>
                 <div class="comparison-item">
                     <h3>anyGIF</h3>
-                    <img src="http://f1dg3t-xyz.duckdns.org/x/gifs/anyGIF_output.gif" alt="GIF created by anyGIF showing higher quality" width="500" height="281" defer>
+                    <img src="/img/anyGIF_output2.gif" alt="GIF created by anyGIF showing higher quality" width="500" height="281" defer>
                 </div>
             </div>
 
