--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         href="img/favicon.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="anyGIF" property="og:title" />
+    <meta content="anyGIF is a powerful desktop application that transforms any video into high-quality GIFs with complete control over the output. Say goodbye to limited online converters!" property="og:description" />
+    <meta content="https://f1dg3txd.github.io/anyGIF/" property="og:url" />
+    <meta content="https://f1dg3txd.github.io/anyGIF/img/Banner@2x.png" property="og:image" />
+    <meta content="#FF0000" data-react-helmet="true" name="theme-color" />
 <style>
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
