--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <meta content="anyGIF is a powerful desktop application that transforms any video into high-quality GIFs with complete control over the output. Say goodbye to limited online converters!" property="og:description" />
     <meta content="https://f1dg3txd.github.io/anyGIF/" property="og:url" />
     <meta content="https://f1dg3txd.github.io/anyGIF/img/Banner@2x.png" property="og:image" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta content="#FF0000" data-react-helmet="true" name="theme-color" />
+    <meta name="twitter:card" content="summary_large_image">
 <style>
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
