--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <meta content="anyGIF" property="og:title" />
     <meta content="anyGIF is a powerful desktop application that transforms any video into high-quality GIFs with complete control over the output. Say goodbye to limited online converters!" property="og:description" />
     <meta content="https://f1dg3txd.github.io/anyGIF/" property="og:url" />
-    <meta content="https://f1dg3txd.github.io/anyGIF/img/discBanner.png" property="og:image" />
+    <meta content="https://f1dg3txd.github.io/anyGIF/img/appIcon.png" property="og:image" />
     <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1024">
-    <meta property="og:image:height" content="1024">
+    <meta property="og:image:width" content="964">
+    <meta property="og:image:height" content="964">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image:src" content="https://f1dg3txd.github.io/anyGIF/img/discBanner.png">
+    <meta name="twitter:image:src" content="https://f1dg3txd.github.io/anyGIF/img/appIcon.png">
     <meta content="#FF0000" data-react-helmet="true" name="theme-color" />
 <style>
 body {
