--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@ body {
     color: white;
 }
 
+.gum {
+    background: #FF90E8;
+    color: black;
+}
+
 .features {
     margin-top: 40px;
     display: grid;
@@ -148,7 +153,10 @@ body {
                     Get Source Code
                 </a>
                 <a href="https://f1dg3t.itch.io/anygif" class="button itch">
-                    Download on itch.io
+                    Get on itch.io
+                </a>
+                <a href="https://f1dg3t.gumroad.com/l/ipcld" class="button gum">
+                    Get on gumroad
                 </a>
             </div>
 
